--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,7 +199,7 @@ button:focus{
 	color: #ffffff;
 }
 .navbar-light .navbar-toggler:hover{
-	background: #cfa671;
+	background: #189034;
 }
 
 /*------------------------------------------------------------------
@@ -267,12 +267,12 @@ button:focus{
     color: #fff;
     background-color: transparent;
     background-image: none;
-    border-color: #cfa671;
+    border-color: #189034;
 }
 .btn-outline-new-white:hover {
     color: #ffffff;
-    background-color: #cfa671;
-    border-color: #cfa671;
+    background-color: #189034;
+    border-color: #189034;
 }
 
 .overlay-background {
@@ -299,8 +299,8 @@ button:focus{
 	border: 2px solid #ffffff;
 }
 .slides-pagination a.current{
-	background: #cfa671;
-	border: 2px solid #cfa671;
+	background: #189034;
+	border: 2px solid #189034;
 }
 
 /*------------------------------------------------------------------
@@ -320,7 +320,7 @@ button:focus{
 	color: #010101;
 }
 .inner-column h1 span{
-	color: #d0a772;
+	color: #63425f;
 }
 .inner-column h4{
 	font-size: 16px;
@@ -330,7 +330,7 @@ button:focus{
 	font-size: 18px;
 }
 .inner-column .btn-outline-new-white{
-	color: #d0a772;
+	color: #189034;
 }
 .inner-column .btn-outline-new-white:hover{
 	color: #ffffff;
