--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,7 +311,7 @@ button:focus{
 	padding: 70px 0px;
 }
 .about-section-box .img-fluid{
-	box-shadow: -10px -10px 0px #d0a772;
+	box-shadow: -10px -10px 0px #189034;
 }
 .inner-column{}
 .inner-column h1{
@@ -342,7 +342,7 @@ button:focus{
 
 
 .qt-background{
-	background: url(../images/qt-bg.jpg) no-repeat;
+	background: url(../images/footer-bg.jpg) no-repeat;
 	background-size: cover;
 	padding: 100px 0;
 	background-attachment: fixed;
@@ -407,7 +407,7 @@ button:focus{
 }
 
 .filter-button-group button.active {
-    background: #cfa671;
+    background: #189034;
     color: #fff;
     box-shadow: 2px 20px 45px 5px rgba(0,0,0,.2);
 }
@@ -429,7 +429,7 @@ button:focus{
     bottom: -100%;
     right: 0;
     height: 100%;
-    background: rgba(207, 166, 113, 0.9);
+    background: rgb(53, 140, 53);
     padding: 12px 12px;
     -webkit-transition: all .3s ease;
     transition: all .3s ease;
@@ -504,7 +504,7 @@ button:focus{
 }
 
 .text-warning{
-	color: #d0a772 !important;
+	color: #189034 !important;
 	font-size: 24px;
 }
 
@@ -524,7 +524,7 @@ button:focus{
 }
 
 #reviews .carousel-control-prev{
-	background: #d0a772;
+	background: #189034;
 	color: #ffffff;
 	display: block;
 	position: absolute;
@@ -540,7 +540,7 @@ button:focus{
 }
 
 #reviews .carousel-control-next{
-	background: #d0a772;
+	background: #189034;
 	color: #ffffff;
 	display: block;
 	position: absolute;
@@ -561,7 +561,7 @@ button:focus{
 -------------------------------------------------------------------*/
 
 .contact-imfo-box{
-	background: #d0a772;
+	background: #189034;
 	padding: 30px 0;
 }
 
@@ -577,7 +577,7 @@ button:focus{
 	line-height: 60px;
 	text-align: center;
 	background: #fff;
-	color: #d0a772;
+	color: #189034;
 	font-size: 30px;
 	-webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
@@ -609,7 +609,7 @@ button:focus{
 	padding-bottom: 0px;
 }
 .bg-f{
-	background-image: url("../images/footer-bg.jpg");
+	background-image: url("../images/bg.jpeg");
 	background-attachment: scroll;
 	background-clip: initial;
 	background-color: rgba(0, 0, 0, 0);
@@ -659,14 +659,14 @@ button:focus{
 	margin-bottom: 15px;
 }
 .footer-area p.lead a:hover{
-	color: #d0a772;
+	color: #189034;
 }
 .footer-area p a{
 	font-size: 18px;
 	color: #ffffff;
 }
 .footer-area p a:hover{
-	color: #d0a772;
+	color: #189034;
 }
 
 .subscribe_form {
@@ -689,7 +689,7 @@ button:focus{
 }
 
 .subscribe_form .submit {
-    background-color: #d0a772;
+    background-color: #189034;
     color: #fff;
     font-size: 16px;
     font-weight: 600;
@@ -741,7 +741,7 @@ button:focus{
 
 .page-breadcrumb {
     padding: 250px 0 150px;
-    background: url(../images/all-bg.jpg) no-repeat;
+    background: url(../images/bg2.jpeg) no-repeat;
     background-attachment: fixed;
     background-size: cover;
     background-position: 0 0;
@@ -781,7 +781,7 @@ button:focus{
 }
 
 .our-team{
-    border: 2px solid #d0a772;
+    border: 2px solid #189034;
     border-radius: 0px;
     text-align: center;
     margin: 10px;
@@ -793,7 +793,7 @@ button:focus{
     content: "";
     width: 100%;
     height: 104%;
-    background: #d0a772;
+    background: #189034;
     position: absolute;
     top: 50%;
     left: 0;
@@ -817,7 +817,7 @@ button:focus{
 .our-team .team-content{
     width: 93%;
     padding: 25px 0 10px;
-    background: #d0a772;
+    background: #189034;
     position: absolute;
     bottom: 50px;
     left: 50%;
@@ -861,13 +861,13 @@ button:focus{
     border-radius: 50%;
     background: #fff;
     font-size: 20px;
-    color: #d0a772;
+    color: #189034;
     transition: all 0.3s ease 0s;
 }
 .our-team .social li a:hover{
     background: #ffffff;
     box-shadow: 0 0 0 5px rgba(255,255,255,0.3);
-    color: #d0a772;
+    color: #189034;
 }
 @media only screen and (max-width: 990px){
     .our-team{ margin-bottom: 30px; }
@@ -897,27 +897,27 @@ button:focus{
 	min-height: 50px;
 }
 .form-control:focus{
-	border: 1px solid #d0a772;
+	border: 1px solid #189034;
 	box-shadow: none;
 }
 
 .form-group .picker__input.picker__input--active{
-	border-color: #d0a772;
+	border-color: #189034;
 }
 
 .submit-button{
 	margin-top: 20px;
 }
 .btn.btn-common{
-	color: #d0a772;
+	color: #189034;
 	background-color: transparent;
 	background-image: none;
-	border-color: #cfa671;
+	border-color: #189034;
 }
 .btn.btn-common:hover{
 	color: #ffffff;
-	background-color: #cfa671;
-	border-color: #cfa671;
+	background-color: #189034;
+	border-color: #189034;
 }
 .blog-box{
 	padding: 70px 0px;
@@ -953,7 +953,7 @@ button:focus{
     padding: 0px 5px;
 }
 .blog-detail ul li span{
-	color: #d0a772;
+	color: #189034;
 	cursor: pointer;
 }
 .blog-detail ul li span:hover{
@@ -970,7 +970,7 @@ button:focus{
 }
 
 .blog-detail a{
-	color: #d0a772;
+	color: #189034;
 	margin-top: 20px;
 }
 
@@ -994,7 +994,7 @@ button:focus{
     position: absolute;
     right: 0px;
     top: 0px;
-    background: #cfa671;
+    background: #189034;
     font-size: 18px;
     color: #ffffff;
     padding: 5px 15px 5px 5px;
@@ -1016,13 +1016,13 @@ button:focus{
     color: #222222;
 }
 .inner-blog-detail ul li span {
-    color: #cfa671;
+    color: #189034;
 }
 .inner-blog-detail p {
     padding: 10px 0px;
 }
 .details-page blockquote {
-    border-left: 5px solid #cfa671;
+    border-left: 5px solid #189034;
 }
 .details-page blockquote {
     padding: 20px;
@@ -1070,11 +1070,11 @@ blockquote {
     font-size: 12px;
 }
 .line-left-social ul li a:hover {
-    background: #cfa671;
+    background: #189034;
     color: #ffffff;
 }
 .line-right-social ul li a:hover {
-    background: #cfa671;
+    background: #189034;
     color: #ffffff;
 }
 .line-right-social h5 {
@@ -1133,7 +1133,7 @@ blockquote {
     border-radius: 6px;
 }
 .right-btn-re:hover {
-    background: #cfa671;
+    background: #189034;
     color: #ffffff !important;
 }
 .comment-respond-box {
@@ -1163,15 +1163,15 @@ blockquote {
 }
 
 .btn-submit{
-	color: #d0a772;
+	color: #189034;
 	background-color: transparent;
 	background-image: none;
-	border-color: #cfa671;
+	border-color: #189034;
 }
 .btn-submit:hover{
 	color: #ffffff;
-	background-color: #cfa671;
-	border-color: #cfa671;
+	background-color: #189034;
+	border-color: #189034;
 }
 
 .right-side-blog h3 {
@@ -1223,7 +1223,7 @@ blockquote {
     width: 100%;
 }
 .blog-categories ul li a:hover{
-	color: #cfa671;
+	color: #189034;
 }
 .recent-box-blog {
     margin-bottom: 20px;
@@ -1241,7 +1241,7 @@ blockquote {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #cfa671;
+    background-color: #189034;
     opacity: 0.4;
     transform: scale(0);
     -webkit-transform: scale(0);
@@ -1290,7 +1290,7 @@ blockquote {
 }
 .blog-tag-box ul li a:hover {
     color: #ffffff;
-    background: #cfa671;
+    background: #189034;
 }
 
 
@@ -1314,7 +1314,7 @@ blockquote {
     height: 32px;
     text-align: center;
     line-height: 30px;
-    background: #d0a772;
+    background: #189034;
     color: #ffffff;
     cursor: pointer;
     border: 0;
