--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -328,6 +328,7 @@ button:focus{
 }
 .inner-column p{
 	font-size: 18px;
+    text-align: left;
 }
 .inner-column .btn-outline-new-white{
 	color: #189034;
