update foto dll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,7 +324,7 @@ button:focus{
 	color: #010101;
 }
 .inner-column h1 span{
-	color: #63425f;
+	color: #545454;
 }
 .inner-column h4{
 	font-size: 16px;
